# Fred_frederico

./: .gitignore  pyproject.toml
.github/workflows/: testing.yml
fred_app/: Dockerfile  __init__.py  compose.yml  compose_vars.env  container.py
fred_app/controllers/: hello.py  list_controller.py
fred_app/database/: list_repository.py  postgres_config.py  schema.sql  sqlite_connection.py
fred_app/models/: list_entity.py  new_list_dto.py
fred_app/models/interfaces/: FredAppException.py
fred_app/models/list/: list_entity.py  new_list_dto.py  update_list_dto.py
fred_app/routes/: hello.py  list.py
fred_app/services/: hello.py  list_service.py
tests/: conftest.py  get_list.py
tests/controllers/list/: create_list_test.py  get_list_test.py  get_lists_test.py  update_list_test.py
