[tool.poetry]
name = "fred_app"
version = "0.0.1"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
blinker="^1.7.0"
click="^8.1.7"
colorama="^0.4.6"
dependency-injector="^4.41.0"
flask="^3.0.3"
importlib-metadata="^7.1.0"
itsdangerous="^2.1.2"
Jinja2="^3.1.3"
MarkupSafe="^2.1.5"
six="^1.16.0"
werkzeug="^3.0.2"
zipp="^3.18"
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
